--- a/web_mockup/main.html
+++ b/web_mockup/main.html
@@ -759,9 +759,23 @@
     </tr>
     <tr>
         <td class="td_supltrid_3" width="11%"><p>  R7.A</p></td>
-        <td class="td_supltrid_3" width="7%"><p>5.hod</p></td>
-        <td class="td_supltrid_3" width="6%"><p>M</p></td>
-        <td class="td_supltrid_3" width="6%"><p>M5</p></td>
+        <td class="td_supltrid_3" width="89%" colspan="7"><p>1.- 3. hod AvŠ</p></td>
+    </tr>
+    <tr>
+        <td class="td_supltrid_3" width="11%">&nbsp;</td>
+        <td class="td_supltrid_3" width="7%"><p>4.hod</p></td>
+        <td class="td_supltrid_3" width="6%"><p>Nj</p></td>
+        <td class="td_supltrid_3" width="6%"><p>NF4</p></td>
+        <td class="td_supltrid_3" width="8%"><p>(P2.1)</p></td>
+        <td class="td_supltrid_3" width="14%"><p>spojí</p></td>
+        <td class="td_supltrid_3" width="28%"><p>Koubková Helena</p></td>
+        <td class="td_supltrid_3" width="20%"><p>(Mar)</p></td>
+    </tr>
+    <tr>
+        <td class="td_supltrid_3" width="11%"><p>&nbsp;</p></td>
+        <td class="td_supltrid_3" width="7%"><p>7.hod</p></td>
+        <td class="td_supltrid_3" width="6%"><p>Zem</p></td>
+        <td class="td_supltrid_3" width="6%">&nbsp;</td>
         <td class="td_supltrid_3" width="8%">&nbsp;</td>
         <td class="td_supltrid_3" width="14%"><p>odpadá</p></td>
         <td class="td_supltrid_3" width="28%">&nbsp;</td>
