mockup web changes

--- a/web_mockup/main.html
+++ b/web_mockup/main.html
@@ -9,7 +9,7 @@
 <body class="suplov_3">
 <!-- 15/16 -->
 <a name=su161219></a>
-<p class="textlarge_3">Suplování:&nbsp;&nbsp;&nbsp;Pondělí 19.12.2016  (lichý týden)</p>
+<p class="textlarge_3">Suplování:&nbsp;&nbsp;&nbsp;Čtvrtek 22.12.2016  (lichý týden)</p>
 <p class="textsmall_3">datum výpisu: 17.12.2016 (13:59)</p>
 <table class="tb_abucit_3" width="100%">
     <tr class="tr_abucit_3">
@@ -280,7 +280,7 @@
 <p>&nbsp;</p>
 <p>&nbsp;</p>
 <a name=su161220></a>
-<p class="textlarge_3">Suplování:&nbsp;&nbsp;&nbsp;Úterý 20.12.2016  (lichý týden)</p>
+<p class="textlarge_3">Suplování:&nbsp;&nbsp;&nbsp;Pátek 23.12.2016  (lichý týden)</p>
 <p class="textsmall_3">datum výpisu: 17.12.2016 (13:59)</p>
 <table class="tb_abtrid_3" width="100%">
     <tr class="tr_abtrid_3">
